# telefonist

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  build_bin_docker.sh  config  config.go  go.mod  go.sum  main.go  patches.txt  webhook.go
_tools/patcher/: patcher.go
assets/: assets.go
assets/web/: api.js  app.js  compare.css  compare_window.js  controls.css  cron.css  cron_manager.js  diff.js  dom.js  event_bus.js  flow.css  flow.js  highlight.css  highlighter.js  index.html  log_renderer.js  login.html  login.js  resizer.js  sip_ladder.css  sip_renderer.js  socket_handler.js  state_manager.js  style.css  testfile_manager.js  utils.js
assets/zip/: sounds.tar.bz2  zip.go
cmd/telefonist/: main.go
examples/: basic_call  js_validation_call
examples/scripts/: audio_log_validation.js  basic_validation.js  chronological_validation.js  rtcp_stats_validation.js  sip_header_validation.js
pkg/gobaresip/: cgo_alsa.go  commands.go  gobaresip.go  gobaresip_test.go  netstring.go  options.go
pkg/gobaresip/audioreport/: CMakeLists.txt  audioreport.c
pkg/gobaresip/aufile/: aufile_play.c  aufile_src.c
pkg/gobaresip/g722/: CMakeLists.txt  g722.c
pkg/telefonist/: api_handlers.go  auth.go  cmdchain.go  cmdchain_test.go  command_test.go  config.go  cron.go  evaluator.go  export.go  flags.go  history.go  history_test.go  logging.go  manager.go  run.go  teststore.go  teststore_test.go  training.go  training_test.go  ui_assets.go  utils.go  webhook.go  websocket.go  ws_broadcast.go  ws_hub.go  ws_testfile_inline.go  ws_testfile_inline_test.go  ws_teststore_commands.go
(+6 files in other folders)
